[metadata]
name = gcf_common
version = attr:gcf_common.__version__
author = Kyoichi Yamada
author_email = thisismystory.1212@gmail.com
description = Google Cloud Functions common
long_description = file:README.md
url = https://github.com/ganso-kyamada/gcf_common
license = Apache License, Version 2.0
classifier =
    Development Status :: 1 - Planning
    Programming Language :: Python
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
packages = find:
install_requires =
  google-cloud-bigquery
  google-cloud-storage
  google-cloud-kms
  google-cloud-pubsub
